
    o	savePlot() no longer automatically adds an extension to the filename.

    o	When Sweave() adds its style file, it now uses shortPathName()
	on the path so that there are no spaces.

    o	The progress bar in download.file() is now supressed by
    	quiet=TRUE (as it has long been on Unix).
    	
    o	RSetReg now uses full pathnames, the same as the regular
    	installer.


BUILDING R

    o	Support for the ACML BLAS has been withdrawn (there is no
	version of ACML 4.0.0 for gcc under Windows, and none at all
	for gfortran).

    o	We assume version 2.7.0 of Rtools.exe, in which gcc is
	version 4.2.1.

    o	We assume Tcl/Tk version 8.5.x (included in version 2.7.0 of
	Rtools.exe).  Earlier versions can be selected in MkRules.
	The distribution in Rtools (and hence in the binary installer)
	includes the BWidget and Tktable extensions.


BUG FIXES

    o	If a windows(rescale="fit") device was shrunk initially to fit
	on screen, the font size was not rescaled to take account of
	the initial shrink factor.

    o	If windows(ypinch=) was specified, the width value was used
	for the height.

    o	The Graphapp computation for keyboard accelerators for menus was
	not always working, at least on Windows XP -- this affected
	e.g. Alt-M plus 'i' for 'List search path', where 's' was
	being underlined.  (PR#11036)
	
    o	The winDialogString() dialog now releases CPU cycles while
    	waiting for input. (PR#11045)



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.2 patched

INSTALLER

    o	The installer now uses version-specific identifiers so that
	multiple versions of R can be installed and uninstalled
	separately. (PR#10746)



		CHANGES IN R VERSION 2.6.2

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. the then current version of tseries) use